2008-05-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add a macro to test IQ in guard expressions.
	Rename NS_JABBER_SESSION as NS_SESSION.

	* src/server/exmpp_server_compression.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_tls.erl: Use 'receiving entity' instead of
	'server'. Replace references to exmpp_server_stream with
	exmpp_stream.

	* src/client/exmpp_client_compression.erl,
	src/client/exmpp_client_legacy_auth.erl,
	src/server/exmpp_client_tls.erl: Use 'initiating entity' instead of
	'client'.

	* src/server/exmpp_server_compression.erl,
	src/client/exmpp_client_compression.erl: Fix exceptions documention.

	* src/client/exmpp_client_compression.erl: Avoid list concatenation
	when it's possible.

	* src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_legacy_auth.erl: Update documentation. Use the
	new IS_IQ macro.

	* src/server/exmpp_server_tls.erl, src/client/exmpp_client_tls.erl:
	Use exceptions for error handling. Add basic documentation.

2008-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_error.erl, src/core/exmpp_stanza.erl,
	src/core/exmpp_iq.erl, src/core/exmpp_stream.erl,
	src/server/exmpp_server_binding.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_binding.erl,
	src/client/exmpp_client_legacy_auth.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am, ebin/exmpp.app.in,
	doc/Makefile.am: Rename exmpp_error to exmpp_stanza.

	* src/core/exmpp_jlib.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Remove
	exmpp_jlib.

	* src/core/exmpp_internals.erl: Add functions to generale a random ID.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl,
	src/client/exmpp_client_binding.erl: Use exmpp_internals for random
	ID.

	* src/core/exmpp_iq.erl: Add functions to access request and result
	contained in an IQ.

	* src/server/exmpp_server_legacy_auth.erl,